fix skill pill spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -310,11 +310,10 @@
         border: 1px solid rgba(80, 0, 200, 0.8);
         border-radius: 5px;
         padding: 0.25em 0.75em;
-        margin: 0.5em 0;
         background-color: rgba(80, 0, 200, 0.6);
         color: white;
         font-size: 0.9em;
-        line-height: 1.5;
+        line-height: 2;
         font-size: 0.9em;
     }
     .skill-industry-experience {
